--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -1,3 +1,4 @@
+<%- include('_header') %>
 <html>
     <head>
         <title><%= title %></title>
@@ -10,6 +11,8 @@
         
     </body>
 </html>
+
+<%- include('_footer') %>
 
 
 
