--- a/views/home.ejs
+++ b/views/home.ejs
@@ -9,6 +9,11 @@
 
     <body>
         <h1>Codeial/ <%=title %></h1>
+
+        <form action="" id="new-post-form" method="POST">
+            <textarea name="content" cols="30" rows="3" placeholder="Type here...."></textarea>
+            <input type="submit" value="Post">
+        </form>
     </body>
 
 </html>
