--- a/views/home.ejs
+++ b/views/home.ejs
@@ -10,10 +10,38 @@
     <body>
         <h1>Codeial/ <%=title %></h1>
 
-        <form action="" id="new-post-form" method="POST">
+        <% if(locals.user) { %>
+
+        <form action="/posts/create" id="new-post-form" method="POST">
             <textarea name="content" cols="30" rows="3" placeholder="Type here...."></textarea>
             <input type="submit" value="Post">
         </form>
+
+        <% } %>
+        
+        <div id="post-list-container">
+            <ul>
+                <% for(post of posts){ %>
+                    
+
+                    <li>
+                        <p>
+
+                            <%= post.content %>
+                            <br>
+                            <small>
+                                <%= post.user.name %>
+                            </small>
+
+                        </p>
+                        
+                    </li>
+                
+                
+                <% } %>
+            </ul> 
+
+        </div>
     </body>
 
 </html>
